--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-cookie": "^4.0.3",
     "react-custom-scrollbars": "^4.2.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-grid-system": "^7.1.1",
     "react-infinite-scroller": "^1.2.4",
